The engine JVM exits on its first OutOfMemoryError and writes a heap dump beside its log
Every forked worker already runs with -XX:+ExitOnOutOfMemoryError; the
engine did not. A 256 MiB coordinator that survives an OOM keeps its
socket open and its heartbeat ticking while threads that caught the
error as Throwable serve nothing, so every client sees a hang, then a
cold restart, and nothing on disk says why.

Both OOM flags join EngineJvmFlags.AOT_SENSITIVE, the one list the
serving line and the AOT trainer line consume, so the trainer copies
them and the cache retrains exactly once. The dump path differs per
engine identity (<state>/engine/<key>.hprof, from EnginePaths), so it
rides the spawn line itself. The JAR spawn line is now a builder the
spawn-line test can assert against.

JK-2899